<resources>
    <string name="app_name">Žákajda do kapsy</string>
    <string name="navigation_drawer_open">Otevřít menu</string>
    <string name="navigation_drawer_close">Zavřít menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nastavení</string>
    <string name="welcomeact">Vítejte v aplikaci</string>
    <string name="title_activity_mobile_setting">Nastavení aplikace</string>
    <string name="soon">Připravujeme</string>

    <!-- markinfo -->
    <string name="sharetext">z %1$s mám za %2$s %3$s</string>
    <string name="basemarkinfo">Známka: %1$s\n\nDatum: %2$s\n\nPředmět: %3$s\n\nPoznámka: %4$s</string>
    <string name="valuemarkinfo">Hodnota: %1$s\n\nTyp zkoušení: %2$s\n\nváha: %3$s</string>
    <string name="teachermarkinfo">Jméno: %1$s</string>
    <string name="basetitlemarkinfo">Obecné informace</string>
    <string name="valuetitlemarkinfo">Informace o hodnotě</string>
    <string name="teachertitlemarkinfo">Informace o zapisovateli</string>

    <!-- login -->
    <string name="adresshint">Adresa isasu</string>
    <string name="usernamehint">Uživatelské jméno</string>
    <string name="passhint">Heslo</string>
    <string name="loginButton">Přihlásit</string>
    <string name="privacy">Přihlášením souhlasíte se zpracováním osobních údajů. Kliknutím na text otevřete informace</string>

    <!-- main -->
    <string name="diameterintime">Průměr v čase</string>
    <string name="last7days">za posledních 7 dní</string>
    <string name="nomarks">Žádné známky</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_mark_info">MarkInfo</string>
    <string name="title_activity_login">Přihlášení</string>
</resources>
